<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

        <variable
            name="model"
            type="com.connect.viewmodels.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/otplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circlelogo"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="vertical"
        android:visibility="visible">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/enter_4_digit_otp_sent_to_your_mobile"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/whitebackground"
            android:hint="@string/enter_otp_number"
            android:inputType="number"
            android:visibility="gone" />

        <com.connect.view.OTPEditText
            android:id="@+id/otp1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@null"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/app_name"
            android:cursorVisible="false"
            android:digits="0123456789"
            android:focusable="true"
            android:imeOptions="actionDone"
            android:inputType="numberPassword"
            android:lines="1"
            android:longClickable="false"
            android:maxLength="4"
            android:maxLines="1"
            android:selectAllOnFocus="false"
            android:textColor="@android:color/white"
            android:textColorHint="@color/lightgrey1"
            android:textIsSelectable="false"
            android:textSelectHandle="@drawable/handle"
            android:textSize="@dimen/_20sdp"
            android:visibility="visible"
            android:text="@={model.login.otp}"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/buttonbackground"
            android:gravity="center"
            android:text="@string/submit"
            android:onClick="@{v->model.onOtpButtonClick()}"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/haven_t_received_otp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/resend"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />


        </LinearLayout>


    </LinearLayout>
</layout>