<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.connect.viewmodels.LoginViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/loginlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circlelogo"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/whitebackground">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:drawableEnd="@drawable/downarrow"
                android:drawablePadding="@dimen/_5sdp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/_91"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@={model.login.number}"
                app:error="@{model.login.numberError}"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@android:color/transparent"
                android:hint="@string/enter_phone_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true" />


        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/otpBV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/buttonbackground"
            android:gravity="center"
            android:onClick="@{(v) -> model.onButtonClick()}"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_25sdp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:background="@color/viewbackground" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerInParent="true"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/continue_with"
                android:textColor="@color/white" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/fblogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/buttonbackground"
            android:drawableStart="@drawable/fblogo"
            android:gravity="center"
            android:text="@string/login_using_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>
</layout>